# comfy-screener

./: .gitignore  Cargo.toml  config.ini  config.json  shell.nix
src/: analysis.rs  comfy_table.rs  cumulative_price_change.rs  filter_utils.rs  find_tickers.rs  indicators.rs  klines.rs  main.rs  storage_utils.rs  tui.rs
