[package]
name = "comfy-screener"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
anyhow = "*"
chrono = "*"
comfy-table = "*"
crossterm = "*"
tokio = { version = "*", features = ["full"] }
reqwest = { version = "*", features = ["json"] }
configparser = "*"
regex = "*"
futures = "*"
